# pyenphase

./: .all-contributorsrc  .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  experiment.py  fixture_collector.py  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  poetry-upgrade.yml  pr-title.yml
devtools/: acb_inspect.py  acb_sleep_example.py  experiment.py  fixture_collector.py
docs/: advanced.md  conf.py  data.md  data_consumption.md  data_ctmeter.md  data_encharge.md  data_enpower.md  data_ensemble.md  data_inverters.md  data_production.md  data_raw.md  documenting.md  endpoint_json.md  index.md  installation.md  known_issues.md  license.md  model_autodoc.md  phase_data.md  requests.md  updaters.md  usage.md  usage_authentication.md  usage_intro.md
docs/json_data/: api_v1_production_inverters.json  home.json  info.xml  ivp_meters.json  ivp_meters_readings.json  ivp_pdm_device_data.json  production.json  production_details.json
src/pyenphase/: __init__.py  auth.py  const.py  envoy.py  exceptions.py  firmware.py  json.py  ssl.py
src/pyenphase/models/: acb.py  c6combiner.py  collar.py  common.py  dry_contacts.py  encharge.py  enpower.py  envoy.py  home.py  inverter.py  meters.py  system_consumption.py  system_production.py  tariff.py
src/pyenphase/updaters/: api_v1_production.py  api_v1_production_inverters.py  base.py  device_data_inverters.py  ensemble.py  generator.py  inventory.py  meters.py  production.py  tariff.py
src/pyenphase/versions/: base.py  legacy.py  modern.py
tests/: common.py  conftest.py  syrupy.py  test_acb.py  test_auth.py  test_ct_meters.py  test_drycontacts.py  test_endpoints.py  test_ensemble.py  test_firmware.py  test_home.py  test_main.py  test_net_consumption.py  test_post_v7_endpoints.py  test_pre_v7_endpoints.py  test_retries.py
tests/__snapshots__/: test_acb.ambr  test_ct_meters.ambr  test_endpoints.ambr  test_ensemble.ambr  test_net_consumption.ambr
tests/fixtures/3.17.3/: api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  production.json_log.json
tests/fixtures/3.7.0/: info  production
tests/fixtures/3.8.10/: admin_lib_tariff  api_v1_production  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  ivp_meters  ivp_meters_log.json  ivp_sc_pvlimit_log.json  production
tests/fixtures/3.9.36/: api_v1_production  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  ivp_ensemble_dry_contacts_log.json  production  production.json  production.json_log.json
tests/fixtures/3.9.36_bad_auth/: admin_lib_tariff_log.json  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  production  production.json  production_log.json
tests/fixtures/4.10.35/: admin_lib_tariff  admin_lib_tariff_log.json  api_v1_production  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  ivp_ensemble_inventory_log.json  ivp_meters_log.json  ivp_meters_readings  ivp_meters_readings_log.json  ivp_ss_gen_schedule_log.json  production  production.json  production.json_log.json  production_log.json
tests/fixtures/4.2.27/: info  production.json
tests/fixtures/4.2.33/: api_v1_production_inverters  info  ivp_meters  ivp_meters_readings  production.json
tests/fixtures/5.0.49/: info  production.json
tests/fixtures/5.0.62/: admin_lib_tariff  admin_lib_tariff_log.json  api_v1_production  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  ivp_ensemble_generator_log.json  ivp_ensemble_inventory  ivp_ensemble_inventory_log.json  ivp_ensemble_status  ivp_meters_log.json  ivp_ss_dry_contact_settings  ivp_ss_dry_contact_settings_log.json  ivp_ss_gen_config_log.json  ivp_ss_pel_settings  production.json  production.json_log.json  production_log.json
tests/fixtures/7.3.130/: api_v1_production  api_v1_production_inverters  info  production  production.json
tests/fixtures/7.3.130_no_consumption/: admin_lib_tariff  admin_lib_tariff_log.json  api_v1_production  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  ivp_ensemble_generator  ivp_ensemble_inventory_log.json  ivp_ensemble_status_log.json  ivp_meters  ivp_meters_log.json  ivp_meters_readings  ivp_meters_readings_log.json  ivp_sc_pvlimit_log.json  production  production.json  production.json_log.json  production_log.json
tests/fixtures/7.3.466_metered_disabled_cts/: admin_lib_tariff  admin_lib_tariff_log.json  api_v1_production  info  ivp_ensemble_dry_contacts_log.json  ivp_ensemble_secctrl  ivp_ensemble_secctrl_log.json  ivp_ensemble_status_log.json  ivp_meters  ivp_meters_log.json  ivp_meters_readings_log.json  ivp_sc_pvlimit_log.json  ivp_ss_pel_settings_log.json  production  production.json  production.json_log.json
tests/fixtures/7.3.466_with_cts_3phase/: _readme  admin_lib_tariff  api_v1_production_inverters  info  ivp_ensemble_status
tests/fixtures/7.3.517/: admin_lib_tariff_log.json  api_v1_production  api_v1_production_inverters  api_v1_production_inverters_log.json  api_v1_production_log.json  info  info_log.json  ivp_ensemble_dry_contacts  ivp_ensemble_dry_contacts_log.json  ivp_ensemble_inventory  ivp_ensemble_inventory_log.json  ivp_ensemble_power  ivp_ensemble_power_log.json  ivp_ensemble_secctrl  ivp_ensemble_secctrl_log.json  ivp_ensemble_status  ivp_ensemble_status_log.json  ivp_ss_dry_contact_settings  ivp_ss_dry_contact_settings_log.json  ivp_ss_gen_config_log.json  ivp_ss_pel_settings  ivp_ss_pel_settings_log.json  production  production.json  production.json_log.json  production_log.json
tests/fixtures/7.3.517_legacy_savings_mode/: admin_lib_tariff  info_log.json  ivp_ensemble_generator  ivp_ensemble_generator_log.json  ivp_ensemble_inventory_log.json  (+5 more)
(+498 files in other folders)
