[project]
name = "pyenphase"
version = "1.26.1"
description = "Library to control enphase envoy"
authors = [{ name = "pyenphase", email = "cgarwood@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["classifiers", "dependencies"]

[tool.poetry]
name = "pyenphase"
version = "1.26.1"
description = "Library to control enphase envoy"
authors = ["pyenphase <cgarwood@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "pyenphase", from = "src" },
]

[project.urls]
"Documentation" = "https://pyenphase.readthedocs.io"
"Repository" = "https://github.com/pyenphase/pyenphase"
"Bug Tracker" = "https://github.com/pyenphase/pyenphase/issues"
"Changelog" = "https://github.com/pyenphase/pyenphase/blob/main/CHANGELOG.md"


[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.24.0"
lxml = ">=4.9.2"
pyjwt = ">=2.7.0"
awesomeversion = ">=22.9.0"
tenacity = ">=8.2.2,<10.0.0"
envoy-utils = ">=0.0.1"
orjson = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"
pytest-cov = ">=5,<7"
types-orjson = "^3.6.2"
respx = ">=0.20.2,<0.23.0"
pytest-asyncio = ">=0.21.1,<0.27.0"
syrupy = "^4.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"
sphinx-autodoc-typehints = ">=1.25.2,<4.0.0"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version", "pyproject.toml:tool.poetry.version"]
version_variables = ["src/pyenphase/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=pyenphase --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
ignore = [
    "S101", # use of assert
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D205", # 1 blank line required between summary line and description
    "D415", # First line should end with a period, question mark, or exclamation point
    "D417", # Missing argument descriptions in the docstring
    "E501", # Line too long
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "B008", # Do not perform function call
    "S110", # `try`-`except`-`pass` detected, consider logging the exception
    "D106", # Missing docstring in public nested class
    "UP007", # typer needs Optional syntax
    "UP038", # Use `X | Y` in `isinstance` is slower
    "S603", #  check for execution of untrusted input
    "S105", # possible hard coded creds
]
select = [
    "B",   # flake8-bugbear
    "D",   # flake8-docstrings
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "F",   # pyflake
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "RUF", # ruff specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "S101",
]
"setup.py" = ["D100"]
"conftest.py" = ["D100"]
"docs/conf.py" = ["D100"]

[tool.ruff.lint.isort]
known-first-party = ["pyenphase", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
